# glib-openssl

./: meson.build
tls/base/: meson.build
tls/openssl/: glib-openssl-static.h  glib-openssl-static.vapi  gtlsbackend-openssl.c  gtlscertificate-openssl.c  gtlsconnection-openssl.c  gtlsfiledatabase-openssl.c  meson.build  openssl-module.c
